--- a/spboot-security/build.gradle
+++ b/spboot-security/build.gradle
@@ -14,15 +14,19 @@ repositories {
 }
 
 dependencies {
+    compile project(':demo-server')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     //implementation 'org.springframework.cloud:spring-cloud-config-server'
     //implementation 'org.springframework.cloud:spring-cloud-starter-security'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-security
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-security', version: '2.1.3.RELEASE'
 
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.5.RELEASE'
+
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-security
     //compile group: 'org.springframework.cloud', name: 'spring-cloud-security', version: '2.1.3.RELEASE'
 
-
+    compile("mysql:mysql-connector-java:6.0.6")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
