mybatis多对一、一对多、多对多对象使用，SQL语句的设计

--- a/demo-server/src/main/resources/application-dev.yml
+++ b/demo-server/src/main/resources/application-dev.yml
@@ -49,6 +49,10 @@ spring:
 mybatis:
   type-aliases-package: com.demo.model
   mapper-locations: classpath*:/mapper/*Mapper.xml
+  mybatis.config-location: classpath:mybatis/mybatis-config.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    call-setters-on-nulls: true
 logging:
   level:
     com:
