--- a/spboot-learn/build.gradle
+++ b/spboot-learn/build.gradle
@@ -22,6 +22,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/log4j/log4j
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
+    //mysql
+    compile 'org.apache.commons:commons-dbcp2'
+    compile("mysql:mysql-connector-java:6.0.6")
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
