--- a/spboot-learn/build.gradle
+++ b/spboot-learn/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile("mysql:mysql-connector-java:6.0.6")
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    
+    compile 'org.springframework.boot:spring-boot-configuration-processor'
 }
