--- a/spboot-learn/build.gradle
+++ b/spboot-learn/build.gradle
@@ -1,8 +1,21 @@
+//buildscript {
+//    repositories {
+//        maven {
+//            url "http://www.eveoh.nl/files/maven2"
+//        }
+//    }
+//    dependencies {
+//        classpath "nl.eveoh:gradle-aspectj:1.2"
+//    }
+//}
 plugins {
     id 'java'
     id 'org.springframework.boot'
 }
+//ext.aspectjVersion = '1.7.4'
+
 apply plugin: 'io.spring.dependency-management'
+//apply plugin: 'aspectj'
 group 'com.example.demo.grpc'
 version '0.0.1-SNAPSHOT'
 
@@ -30,4 +43,16 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
     compile 'org.springframework.boot:spring-boot-configuration-processor'
+
+    // https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.4'
+    // https://mvnrepository.com/artifact/org.aspectj/aspectjrt
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.4'
+    // https://mvnrepository.com/artifact/gradle.plugin.name.remal/gradle-plugins
+    //compile group: 'gradle.plugin.name.remal', name: 'gradle-plugins', version: '1.0.24'
+    // https://mvnrepository.com/artifact/org.springframework/spring-aop
+    compile group: 'org.springframework', name: 'spring-aop', version: '5.0.8.RELEASE'//version: '5.1.5.RELEASE'
+    // https://mvnrepository.com/artifact/cglib/cglib
+    compile group: 'cglib', name: 'cglib', version: '3.2.10'
+
 }
