--- a/spboot-learn/build.gradle
+++ b/spboot-learn/build.gradle
@@ -35,15 +35,13 @@ dependencies {
 
     // https://mvnrepository.com/artifact/log4j/log4j
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
-
-    //mysql
-    compile 'org.apache.commons:commons-dbcp2'
-    compile("mysql:mysql-connector-java:6.0.6")
+    
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
     compile 'org.springframework.boot:spring-boot-configuration-processor'
 
+    //AOP需要的依赖
     // https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.4'
     // https://mvnrepository.com/artifact/org.aspectj/aspectjrt
@@ -55,4 +53,19 @@ dependencies {
     // https://mvnrepository.com/artifact/cglib/cglib
     compile group: 'cglib', name: 'cglib', version: '3.2.10'
 
+
+
+    //jpa
+    //compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //默认数据源内存数据库
+    //runtimeOnly 'com.h2database:h2'
+
+    //mybatis
+    compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
+    
+    
+    //mysql
+    compile 'org.apache.commons:commons-dbcp2'
+    compile 'org.springframework.boot:spring-boot-starter-jdbc'
+    compile("mysql:mysql-connector-java:6.0.6")
 }
