--- a/spboot-learn/src/main/resources/application-dev.yml
+++ b/spboot-learn/src/main/resources/application-dev.yml
@@ -4,11 +4,23 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/spboot?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: root
+#    tomcat:
+#      max-idle: 10
+#      max-active: 50
+#      max-wait: 10000
+#      initial-size: 5
 
-#logging:
-# level:
-#    root: debug
-
+logging:
+ level:
+    root: debug
+    org:
+      sprinngframework: debug
+      org:
+        mybatis: debug
+mybatis:
+  mapper-locations: classpath*:/mapper/*.xml
+  type-aliases-package: com.spboot.db.pojo
+  type-handlers-package: com.spboot.db.handler
