--- a/spboot-learn/build.gradle
+++ b/spboot-learn/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     
     implementation 'javax.servlet:javax.servlet-api'
     //jsp和jstl
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-    implementation 'javax.servlet:jstl'
+    //implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    //implementation 'javax.servlet:jstl'
 
     // https://mvnrepository.com/artifact/log4j/log4j
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
@@ -39,7 +39,7 @@ dependencies {
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
-    compile 'org.springframework.boot:spring-boot-configuration-processor'
+    //compile 'org.springframework.boot:spring-boot-configuration-processor'
 
     //AOP需要的依赖
     // https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
@@ -64,8 +64,9 @@ dependencies {
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
     
     
-    //mysql
+    
     compile 'org.apache.commons:commons-dbcp2'
+    //mysql
     compile 'org.springframework.boot:spring-boot-starter-jdbc'
     compile("mysql:mysql-connector-java:6.0.6")
 }
