maven模块的添加 java违例的正确使用

--- a/spboot-learn/build.gradle
+++ b/spboot-learn/build.gradle
@@ -69,4 +69,9 @@ dependencies {
     //mysql
     compile 'org.springframework.boot:spring-boot-starter-jdbc'
     compile("mysql:mysql-connector-java:6.0.6")
+    
+    //redis
+    //compile 'org.springframework.boot:spring-boot-starter-data-redis'
+    
+    
 }
