--- a/spboot-learn/src/main/resources/application-dev.yml
+++ b/spboot-learn/src/main/resources/application-dev.yml
@@ -7,6 +7,18 @@ spring:
     url: jdbc:mysql://localhost:3306/spboot_tmp?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: root
+  redis:
+    host: 10.100.2.124
+    port: 6379
+    jedis:
+      pool:
+        min-idle: 5
+        max-active: 10
+        max-idle: 10
+        max-wait: 2000ms
+
+    timeout: 1000ms
+
 #    tomcat:
 #      max-idle: 10
 #      max-active: 50
